RESOLVED FIXED233041
[Web Animations] Accelerated animations with a single keyframe don't account for prior forward-filling animations
https://bugs.webkit.org/show_bug.cgi?id=233041
Summary [Web Animations] Accelerated animations with a single keyframe don't account ...
Antoine Quint
Reported 2021-11-12 06:54:45 PST
[Web Animations] Accelerated animations with a single keyframe don't account for prior forward-filling animations
Attachments
Patch (6.24 KB, patch)
2021-11-12 06:58 PST, Antoine Quint
dino: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2021-11-12 06:58:46 PST
Antoine Quint
Comment 2 2021-11-12 06:58:52 PST
Antoine Quint
Comment 3 2021-11-12 09:41:00 PST
Note You need to log in before you can comment on or make changes to this bug.